[tool.poetry]
name = "repl_python3_rankbot"
version = "0.1.0"
description = ""
authors = ["furyaus <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
discord = "^1.7.3"
replit = "^3.1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
