[tool.poetry]
name = "repl_python3_rankbot"
version = "0.1.0"
description = ""
authors = ["furyaus <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
discord = "^1.7.3"
pytz = "^2021.1"
PyGithub = "^1.55"
dropbox = "^11.22.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
